fix: increase width of overrides container to avoid flickering for content in all tabs (#18909)

--- a/src/modules/75-cd/components/ServiceOverrides/components/ListRows/ListRows.module.scss
+++ b/src/modules/75-cd/components/ServiceOverrides/components/ListRows/ListRows.module.scss
@@ -12,7 +12,7 @@
    * 50px is the height of the headers
    */
   height: calc(100vh - var(--page-header-height) - 43px - 20px - 49px - 50px);
-  min-width: 1175px;
+  min-width: 1454px;
   overflow-y: scroll;
 }
 
